fixed alignment issue

--- a/styles/default.css
+++ b/styles/default.css
@@ -126,6 +126,7 @@ div.date
 div.title
 {
 	font-weight: bold;
+	margin-bottom: 5px;
 }
 
 div.desc
